final_assignment.html

--- a/final_assignment.html
+++ b/final_assignment.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <main>
-        <h1>My Carrer Goals</h1>
+        <h1 id="main">My Carrer Goals</h1>
 
         <div>
             <p>This is a webpage to illustrate my goals and dreams as a proffesional in Biotechnology</p>
         </div>
-        
+        <p></p>
         <a href = "#one">My Short Term Goals</a>
         <a href = "#two">Some Masters Options</a>
 
@@ -21,10 +21,14 @@
             <ul>
                 <li>Keep growing in the informatic field</li>
                 <img src = "Images/Informatics.jpg" width = "200" alt="Informatics">
+                <p></p>
+              
                 <li>Start my master's degree in Bioinformatics</li>
                 <img src = "Images/Bioinformatics.jpg" width = "200" alt="Bioinformatics">
+                <p></p>
                 <li>Learn new tools to become better in what I do</li>
                 <img src = "Images/Unify.jpg" width = "200" alt="Unify">
+                <p></p>
             </ul>
         </div>
 
@@ -39,7 +43,7 @@
                 <li><a href = "https://www.juniata.edu/academics/graduate-programs/master-of-bioinformatics/"><h4>Bioinformatics Master’s at Juniata College </h4></a></li>
             </ul>
         </div>
-
+        <a href = "#main">Go to the top of the page</a>
         <footer>Copyright - Ivan Solis</footer>
     </main>
 </body>
